fix subreddits not showing completely

--- a/public/stylesheets/less/rp-sidenav.less
+++ b/public/stylesheets/less/rp-sidenav.less
@@ -192,7 +192,7 @@
 }
 
 .rp-sidenav-subreddit-list-open {
-    max-height: 5000px;
+    max-height: 10000px;
 
 }
 
